review from Gaussian elimination with pivoting until Cholesky decomposition

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -1073,139 +1073,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Gaussian elimination with partial pivoting for the particular case in which there is a single data vector $\\mathbf{y}$ can be implemented as follows:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    def Gauss_elim(A, y, check_input=True):\n",
-    "        N = A.shape[0]\n",
-    "        if check_input is True:\n",
-    "            assert A.ndim == 2, 'A must be a matrix'\n",
-    "            assert y.ndim == 1, 'y must be a vector'\n",
-    "            assert A.shape[1] == N, 'A must be square'\n",
-    "            assert y.size == N, 'A columns must be equal to y size'\n",
-    "\n",
-    "        # create matrix C by stacking A and y\n",
-    "        C = \n",
-    "\n",
-    "        for k = 1:N-1\n",
-    "\n",
-    "            # permutation step (computation of C tilde - eq. 3)\n",
-    "            p, C = permut(C, k-1)\n",
-    "\n",
-    "            # assert the pivot is nonzero\n",
-    "            assert C[k-1,k-1] != 0., 'null pivot!'\n",
-    "\n",
-    "            # calculate the Gauss multipliers and store them \n",
-    "            # in the lower part of C (equations 5 and 7)\n",
-    "            C[k:,k-1] = \n",
-    "\n",
-    "            # zeroing of the elements in the (k-1)th column (equation 8)\n",
-    "            C[k:,k:] -= \n",
-    "\n",
-    "        # return the equivalent triangular system and Gauss multipliers\n",
-    "        return C[:,:N], C[:,N]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The permutation function can be defined as follows:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def permut (C, i):\n",
-    "    p = [j for j in range(C.shape[0])]\n",
-    "    imax = i + np.argmax(np.abs(C[i:,i]))\n",
-    "    if imax != i:\n",
-    "        p[i], p[imax] = p[imax], p[i]\n",
-    "    return p, C[p,:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Testing the function `Gauss_elim`"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# define N\n",
-    "N = 7"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# Create a matrix A\n",
-    "A = 10*np.random.rand(N,N)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# create a vector x\n",
-    "x = 3*np.random.rand(N)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# compute the vector y\n",
-    "y = np.dot(A, x)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# use the Gauss_elim to compute the equivalent triagular system\n",
-    "B, z = Gauss_elim(A, y)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# solve the equivalent triangular system\n",
-    "xeq = np.linalg.solve(B, z)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# compare the true vector x with the computed xeq\n",
-    "# they must be equal to each other\n",
-    "np.allclose(x, xeq)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Inverse matrices"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "Computing the inverse of a matrix is a very important task. The inverse of an $N \\times N$ matrix $\\mathbf{A}$ is commonly represented by $\\mathbf{A}^{-1}$. The inverse satisfies:"
@@ -1300,41 +1177,230 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that, in this case, the Gaussian elimination is computed for more than one data vector. This \"expanded\" Gaussian elimination can be implemented as follows:"
+    "### Exercise 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    def Gauss_elim_expanded(A, Y, check_input=True):\n",
-    "        N = A.shape[0]\n",
-    "        if check_input is True:\n",
-    "            assert A.ndim == Y.ndim == 2, 'A and Y must be matrices'\n",
-    "            assert A.shape[1] == N, 'A must be square'\n",
-    "            assert Y.shape[0] == N, 'A columns must have the same size as Y rows'\n",
+    "Create a function `Gauss_elim` that implement the Gaussian elimination according to the following template:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def Gauss_elim(A, y, check_input=True):\n",
+    "    '''\n",
+    "    Compute the equivalent triangular system for a system Ax = y.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    A : numpy narray 2d\n",
+    "        Full square matrix of the linear system.\n",
+    "    y : numpy array 1d\n",
+    "        Independent vector of the linear system.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    C[:, :N] : numpy array 2d\n",
+    "        Upper triangular matrix of the equivalent system.\n",
+    "    C[:,N] : numpy array 1d\n",
+    "        Independent vector of the equivalent system.\n",
+    "    '''\n",
+    "    N = A.shape[0]\n",
+    "    if check_input is True:\n",
+    "        assert A.ndim == 2, 'A must be a matrix'\n",
+    "        assert y.ndim == 1, 'y must be a vector'\n",
+    "        assert A.shape[1] == N, 'A must be square'\n",
+    "        assert y.size == N, 'A columns must be equal to y size'\n",
+    "    # create matrix C by stacking A and y\n",
+    "    C = \n",
+    "    for k = 1:N-1\n",
+    "        # permutation step (computation of C tilde - eq. 3)\n",
+    "        p, C = permut(C, k-1)\n",
+    "        # assert the pivot is nonzero\n",
+    "        assert C[k-1,k-1] != 0., 'null pivot!'\n",
+    "        # calculate the Gauss multipliers and store them \n",
+    "        # in the lower part of C (equations 5 and 7)\n",
+    "        C[k:,k-1] = \n",
+    "        # zeroing of the elements in the (k-1)th column (equation 8)\n",
+    "        C[k:,k:] -= \n",
+    "    # return the equivalent triangular system and Gauss multipliers\n",
+    "    return C[:,:N], C[:,N]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The permutation function can be defined as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def permut (C, i):\n",
+    "    p = [j for j in range(C.shape[0])]\n",
+    "    imax = i + np.argmax(np.abs(C[i:,i]))\n",
+    "    if imax != i:\n",
+    "        p[i], p[imax] = p[imax], p[i]\n",
+    "    return p, C[p,:]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionally, create **at least three tests**:\n",
     "\n",
-    "        # create matrix C by stacking A and y\n",
-    "        C = \n",
+    "* Create a linear system and the associated equivalent triangular system (do not use the function `Gauss_elim`!). Then use the function `Gauss_elim` to compute an equivalent triangular system. Finally, compare the true and the computed triangular system. They must be equal to each other.\n",
     "\n",
-    "        for k = 1:N-1\n",
+    "* Create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `Gauss_elim` to compute the equivalent triangular system. Use one of your functions to compute a vector `x1` by solving the equivalent triangular system. Finally, compare the computed vector `x1` and the expected vector `x0`.\n",
     "\n",
-    "            # permutation step (computation of C tilde - eq. 3)\n",
-    "            p, C = permut(C, k-1)\n",
+    "* Create a reference input and a reference output for the `permut` function. Then, compare the result produced by the function `permut` and the reference output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing the function `Gauss_elim`"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# define N\n",
+    "N = 7"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# Create a matrix A\n",
+    "A = 10*np.random.rand(N,N)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# create a vector x\n",
+    "x = 3*np.random.rand(N)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# compute the vector y\n",
+    "y = np.dot(A, x)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# use the Gauss_elim to compute the equivalent triagular system\n",
+    "B, z = Gauss_elim(A, y)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# solve the equivalent triangular system\n",
+    "xeq = np.linalg.solve(B, z)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# compare the true vector x with the computed xeq\n",
+    "# they must be equal to each other\n",
+    "np.allclose(x, xeq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) In your functions file, create a function called `Gauss_elim_expanded` to compute the expanded equivalent system. The code must receive a matrix `A` and a matrix `Y` and return the matrix `C` (the same for function `Gauss_elim`) and the matriz `Z` containing all vector of the equivalent system.\n",
     "\n",
-    "            # assert the pivot is nonzero\n",
-    "            assert C[k-1,k-1] != 0., 'null pivot!'\n",
-    "\n",
-    "            # calculate the Gauss multipliers and store them \n",
-    "            # in the lower part of C (equations 5 and 7)\n",
-    "            C[k:,k-1] = \n",
-    "\n",
-    "            # zeroing of the elements in the (k-1)th column (equation 8)\n",
-    "            C[k:,k:] -= \n",
-    "\n",
-    "        # return the triangular matrix with Gauss multipliers and \n",
-    "        # all equivalent vectors\n",
-    "        return C[:,:N], C[:,N:]"
+    "2) In your test file, create two tests. In the first test, create a matrix `A`, compute its inverse `Ainv` with function `Gauss_elim_expanded` and verify if the products `A Ainv` and `Ainv A` are equal to the identity matrix. The second test must compare the computed inverse matrix and that computed by using the routine [`numpy.linalg.inv`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a function `Gauss_elim_expanded` to implement the \"expanded\" Gaussian elimination according to the template below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def Gauss_elim_expanded(A, Y, check_input=True):\n",
+    "    '''\n",
+    "    Compute the equivalent triangular system for an \"expended\" system Ax = Y.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    A : numpy narray 2d\n",
+    "        Full square matrix of the linear system.\n",
+    "    Y : numpy array 2d\n",
+    "        Independent vectors of the linear system.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    C[:, :N] : numpy array 2d\n",
+    "        Upper triangular matrix of the equivalent system.\n",
+    "    C[:,N:] : numpy array 2d\n",
+    "        Independent vectors of the equivalent system.\n",
+    "    '''\n",
+    "    N = A.shape[0]\n",
+    "    if check_input is True:\n",
+    "        assert A.ndim == Y.ndim == 2, 'A and Y must be matrices'\n",
+    "        assert A.shape[1] == N, 'A must be square'\n",
+    "        assert Y.shape[0] == N, 'A columns must have the same size as Y rows'\n",
+    "    # create matrix C by stacking A and y\n",
+    "    C = \n",
+    "    for k = 1:N-1\n",
+    "        # permutation step (computation of C tilde - eq. 3)\n",
+    "        p, C = permut(C, k-1)\n",
+    "        # assert the pivot is nonzero\n",
+    "        assert C[k-1,k-1] != 0., 'null pivot!'\n",
+    "        # calculate the Gauss multipliers and store them \n",
+    "        # in the lower part of C (equations 5 and 7)\n",
+    "        C[k:,k-1] = \n",
+    "        # zeroing of the elements in the (k-1)th column (equation 8)\n",
+    "        C[k:,k:] -= \n",
+    "    # return the triangular matrix with Gauss multipliers and \n",
+    "    # all equivalent vectors\n",
+    "    return C[:,:N], C[:,N:]\n",
+    "```"
    ]
   },
   {
@@ -1390,42 +1456,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1) In your functions file, create a function called `Gauss_elim` to compute the equivalent triangular system. Note that the algorithm shown above uses the function `permut`, receives the matrix `A` and the vector `y` and returns two numpy arrays containing the equivalent triangular system, as well as the Gauss multipliers. \n",
-    "\n",
-    "2) In your test file, create a linear system and the associated equivalent triangular system (do not use the function `Gauss_elim`!). Then use the function `Gauss_elim` to compute an equivalent triangular system. Finally, compare the true and the computed triangular system. They must be equal to each other.\n",
-    "\n",
-    "3) In your test file, create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `Gauss_elim` to compute the equivalent triangular system. Use one of your functions to compute a vector `x1` by solving the equivalent triangular system. Finally, compare the computed vector `x1` and the expected vector `x0`.\n",
-    "\n",
-    "4) In your test file, create a test for the function `permut` presented above. For this test, create a reference input and a reference output. Then, compare the result produced by the function `permut` and the reference output."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1) In your functions file, create a function called `Gauss_elim_expanded` to compute the expanded equivalent system. The code must receive a matrix `A` and a matrix `Y` and return the matrix `C` (the same for function `Gauss_elim`) and the matriz `Z` containing all vector of the equivalent system.\n",
-    "\n",
-    "2) In your test file, create two tests. In the first test, create a matrix `A`, compute its inverse `Ainv` with function `Gauss_elim_expanded` and verify if the products `A Ainv` and `Ainv A` are equal to the identity matrix. The second test must compare the computed inverse matrix and that computed by using the routine [`numpy.linalg.inv`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html). "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1449,9 +1479,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
