--- a/Content/lu_decomp.ipynb
+++ b/Content/lu_decomp.ipynb
@@ -172,7 +172,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "<a id='eq4a'></a>\n",
@@ -200,7 +203,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "and, similarly, "
@@ -209,7 +215,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "<a id='eq4b'></a>\n",
@@ -237,7 +246,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "Notice that, according to the algorithm, the matrix $\\mathbf{A}^{(2)}$ ([equation 1c](#eq1)) can be written as follows:"
@@ -516,7 +528,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "## Existence of the LU decomposition"
@@ -538,52 +553,133 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "source": [
-    "## Computational implementation "
+    "### Exercises"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The LU decomposition described above can be implemented similarly to the function `Gauss_elim` in the notebook `gauss-elim-pivoting` as follows:"
+    "Create a function `lu_decomp` tha computes the LU decomposition of a given square matrix according to the template below:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    def lu_decomp(A, check_input=True):\n",
-    "        N = A.shape[0]\n",
-    "        if check_input is True:\n",
-    "            assert A.ndim == 2, 'A must be a matrix'\n",
-    "            assert A.shape[1] == N, 'A must be square'\n",
-    "\n",
-    "        # create matrix C as a copy of A\n",
-    "        C = \n",
-    "\n",
-    "        for k = 1:N-1\n",
-    "\n",
-    "            # assert the pivot is nonzero\n",
-    "            assert C[k-1,k-1] != 0., 'null pivot!'\n",
-    "\n",
-    "            # calculate the Gauss multipliers and store them \n",
-    "            # in the lower part of C\n",
-    "            C[k:,k-1] = \n",
-    "\n",
-    "            # zeroing of the elements in the (k-1)th column\n",
-    "            C[k:,k:] = \n",
-    "\n",
-    "        # return matrix C\n",
-    "        return C"
+    "```python\n",
+    "def lu_decomp(A, check_input=True):\n",
+    "    '''\n",
+    "    Compute the LU decomposition for a matrix A.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    A : numpy narray 2d\n",
+    "        Full square matrix of the linear system.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    C : numpy array 2d\n",
+    "        Full square matrix containing the element of L below the main diagonal and \n",
+    "        the elements of U in the upper triangle (including the elements on the main diagonal).\n",
+    "    '''\n",
+    "    N = A.shape[0]\n",
+    "    if check_input is True:\n",
+    "        assert A.ndim == 2, 'A must be a matrix'\n",
+    "        assert A.shape[1] == N, 'A must be square'\n",
+    "    # create matrix C as a copy of A\n",
+    "    C = \n",
+    "    for k = 1:N-1\n",
+    "        # assert the pivot is nonzero\n",
+    "        assert C[k-1,k-1] != 0., 'null pivot!'\n",
+    "        # calculate the Gauss multipliers and store them \n",
+    "        # in the lower part of C\n",
+    "        C[k:,k-1] = \n",
+    "        # zeroing of the elements in the (k-1)th column\n",
+    "        C[k:,k:] = \n",
+    "    # return matrix C\n",
+    "    return C\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This algorithm receives a square matrix $\\mathbf{A}$ and returns a matrix $\\mathbf{C}$ containing the triangular matrices $\\mathbf{L}$ and $\\mathbf{U}$. The elements of $\\mathbf{L}$, except the unitary elements of its main diagonal, are stored below the main diagonal of $\\mathbf{C}$. The elements of $\\mathbf{U}$ are stored in the upper part of $\\mathbf{C}$, including its main diagonal."
+    "Note that the function `lu_decomp` receives a square matrix $\\mathbf{A}$ and returns a matrix $\\mathbf{C}$ containing the triangular matrices $\\mathbf{L}$ and $\\mathbf{U}$. The elements of $\\mathbf{L}$, except the unitary elements of its main diagonal, are stored below the main diagonal of $\\mathbf{C}$. The elements of $\\mathbf{U}$ are stored in the upper part of $\\mathbf{C}$, including its main diagonal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionally, create a function called `lu_solve` that receives the output of function `lu_decomp` and a vector `y` and return the solution vector `x` of the linear system $\\mathbf{A \\, x} = \\mathbf{y}$. Use the template below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def lu_solve(C, y, check_input=True):\n",
+    "    '''\n",
+    "    Solve the linear system Ax = y for x by using the LU decomposition \n",
+    "    of matrix A.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    C : numpy narray 2d\n",
+    "        Full square matrix containing the elements of L below the main diagonal and \n",
+    "        the elements of U in the upper triangle (including the elements on the main diagonal).\n",
+    "        (Output of the function 'lu_decomp').\n",
+    "    y : numpy array 1d\n",
+    "        Independent vector of the linear system.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    x : numpy array 1d\n",
+    "        Solution of the linear system Ax=y.\n",
+    "    '''\n",
+    "    N = C.shape[0]\n",
+    "    if check_input is True:\n",
+    "        assert C.ndim == 2, 'C must be a matrix'\n",
+    "        assert C.shape[1] == N, 'C must be square'\n",
+    "        assert y.ndim == 1, 'y must be a vector'\n",
+    "        assert y.size == N, 'C columns must be equal to y size'\n",
+    "    \n",
+    "    # create your code here\n",
+    "    \n",
+    "    return x\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function `lu_solve` must use one of your function to solve triangular systems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, create at least **three tests**:\n",
+    "\n",
+    "* Define a square matrix `A`, compute a matrix `C` by using the function `lu_decomp`, use `C` to create the triangular matrices `L` and `U` and verify the if condition `A = LU` is satisfied (see the example below).\n",
+    "\n",
+    "* Compare the solution of the linear system obtained by `lu_solve` and the solution obtained by [`numpy.linalg.solve`](https://numpy.org/doc/stable/reference/generated/numpy.linalg.solve.html).\n",
+    "\n",
+    "* Define a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the functions `lu_decomp` and `lu_solve` to compute a vector `x1` by solving the linear system. Finally, compare the computed vector `x1` and the expected vector `x0`."
    ]
   },
   {
@@ -635,28 +731,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. In your functions file, create a function called `lu_decomp` for implementing the LU decomposition presented above. The code must receive a matrix `A` and return the matrix `C` containing the matrices `L` (without the main diagonal) and `U`.\n",
-    "\n",
-    "2. In your functions file, create a function called `lu_solve`. This function must receive the matrix `C` (computed with `lu_decomp`) and a vector `y` and return the solution vector `x`. Function `lu_solve` must use your functions for solving triangular systems.\n",
-    "\n",
-    "3. In your test file, create a test that defines a square matrix `A`, compute a matrix `C` by using the function `lu_decomp`, use `C` to create the triangular matrices `L` and `U` and verify the if condition `A = LU` is satisfied (see the example above).\n",
-    "\n",
-    "4. In your test file, create two aditional tests. One test must compare the solution of the linear system obtained by `lu_solve` and the solution obtained by [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html). The second test must create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the functions `lu_decomp` and `lu_solve` to compute a vector `x1` by solving the linear system. Finally, compare the computed vector `x1` and the expected vector `x0`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -666,7 +740,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -680,9 +754,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
