--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -392,54 +392,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1"
+    "### Exercise 1 (optional)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your functions file, create a function called `cho_decomp` for computing the matrix `G` from a symmetric and positive definite matrix `A`. The function must receive `A` and return the matrix `G`.\n",
+    "1) Create a function called `cho_decomp` for computing the matrix `G` from a symmetric and positive definite matrix `A`. The function must receive `A` and return the matrix `G`.\n",
     "\n",
-    "2) In your test file, use the function `cho_decomp` to verify if $\\mathbf{A} = \\mathbf{G}\\mathbf{G}^{\\top}$."
+    "2) Use the function `cho_decomp` to verify if $\\mathbf{A} = \\mathbf{G}\\mathbf{G}^{\\top}$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2"
+    "### Exercise 2 (optional)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your functions file, create a function called `cho_solve` to solve a linear system by using the calculated `G`. The function must receive `G` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
+    "1) Create a function called `cho_solve` to solve a linear system by using the calculated `G`. The function must receive `G` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
     "\n",
-    "2) In your test file, compare the solution obtained by using the function `cho_solve` with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
+    "2) Compare the solution obtained by using the function `cho_solve` with the solution obtained by using the routine [`numpy.linalg.solve`](https://numpy.org/doc/stable/reference/generated/numpy.linalg.solve.html)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3"
+    "### Exercise 3 (optional)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your functions file, create a function called `cho_inverse` to compute the inverse of a symmetric positive definite matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `cho_decomp` and `cho_solve`.\n",
+    "1) Create a function called `cho_inverse` to compute the inverse of a symmetric positive definite matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `cho_decomp` and `cho_solve`.\n",
     "\n",
-    "2) In your test file, use the function `cho_inverse` to compute the inverse of a symmetric positive definite matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
+    "2) Use the function `cho_inverse` to compute the inverse of a symmetric positive definite matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -453,9 +460,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
