--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{L}^{-\\top} = \\left( \\mathbf{L}^{-1} \\right)^{\\top} = \\left( \\mathbf{L}^{\\top} \\right)^{-1}$. Notice that"
+    "where $\\mathbf{L}^{-\\top} \\equiv \\left( \\mathbf{L}^{-1} \\right)^{\\top} = \\left( \\mathbf{L}^{\\top} \\right)^{-1}$. Notice that"
    ]
   },
   {
@@ -641,54 +641,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1"
+    "### Exercise 1 (optional)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your functions file, create a function called `ldlt_decomp` for computing the matrices `L` and `D` from a symmetric matrix `A`. The function must receive a symmetric matrix `A` and return a lower triangular matrix `L` and an 1D array `d` with the diagonal elements of the matrix `D`.\n",
+    "1) Create a function called `ldlt_decomp` for computing the matrices `L` and `D` from a symmetric matrix `A`. The function must receive a symmetric matrix `A` and return a lower triangular matrix `L` and an 1D array `d` with the diagonal elements of the matrix `D`.\n",
     "\n",
-    "2) In your test file, use the function `ldlt_decomp` to verify if a given symmetric matrix $\\mathbf{A}$ satisfies the condition  $\\mathbf{A} = \\mathbf{L}\\mathbf{D}\\mathbf{L}^{\\top}$."
+    "2) Use the function `ldlt_decomp` to verify if a given symmetric matrix $\\mathbf{A}$ satisfies the condition  $\\mathbf{A} = \\mathbf{L}\\mathbf{D}\\mathbf{L}^{\\top}$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2"
+    "### Exercise 2 (optional)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your functions file, create a function called `ldlt_solve` to solve a linear system by using the calculated `L` and `d`. The function must receive `L`, `d` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
+    "1) Create a function called `ldlt_solve` to solve a linear system by using the calculated `L` and `d`. The function must receive `L`, `d` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
     "\n",
-    "2) In your test file, compare the solution obtained by using the function `ldlt_solve` with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
+    "2) Compare the solution obtained by using the function `ldlt_solve` with the solution obtained by using the routine [`numpy.linalg.solve`](https://numpy.org/doc/stable/reference/generated/numpy.linalg.solve.html)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3"
+    "### Exercise 3 (optional)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your functions file, create a function called `ldlt_inverse` to compute the inverse of a symmetric matrix. The code must receive a symmetric matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `ldlt_decomp` and `ldlt_solve`.\n",
+    "1) Create a function called `ldlt_inverse` to compute the inverse of a symmetric matrix. The code must receive a symmetric matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `ldlt_decomp` and `ldlt_solve`.\n",
     "\n",
-    "2) In your test file, use the function `ldlt_inverse` to compute the inverse of a symmetric matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
+    "2) Use the function `ldlt_inverse` to compute the inverse of a symmetric matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -702,9 +709,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
