--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -158,147 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The example given above can be easily generalized for any symmetric and positive definite $N \\times N$ matrix $\\mathbf{A}$.\n",
-    "\n",
-    "The Cholesky decomposition can be implemented as follows:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    def Cholesky_decomp(A, check_input=True):\n",
-    "        N = A.shape[0]\n",
-    "        if check_input is True:\n",
-    "            assert A.ndim == 2, 'A must be a matrix'\n",
-    "            assert A.shape[1] == N, 'A must be square'\n",
-    "            assert np.all(A.T == A), 'A must be symmetric'\n",
-    "        \n",
-    "        G = N x N matrix of zeros \n",
-    "\n",
-    "        for j = 0:N-1\n",
-    "\n",
-    "            G[j,j] = A[j,j] - dot(G[j,:j-1],G[j,:j-1])\n",
-    "\n",
-    "            G[j,j] = sqrt(G[j,j])\n",
-    "\n",
-    "            G[j+1:,j] = (A[j+1:,j] - dot(G[j+1:,:j-1], G[j,:j-1]))/G[j,j]\n",
-    "        \n",
-    "        return G"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that this algorithm can be used to verify if a given symmetric matrix is positive definite. If a given matrix is not positive definite, there will be a negative argument in the square root presented above.\n",
-    "\n",
-    "An alternative implementation overwrites the lower triangle of $\\mathbf{A}$, including the main diagonal, with the Cholesky factor $\\mathbf{G}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    def Cholesky_decomp_overwrite(A, check_input=True):\n",
-    "        N = A.shape[0]\n",
-    "        if check_input is True:\n",
-    "            assert A.ndim == 2, 'A must be a matrix'\n",
-    "            assert A.shape[1] == N, 'A must be square'\n",
-    "            assert np.all(A.T == A), 'A must be symmetric'\n",
-    "\n",
-    "        for j = 0:N-1\n",
-    "            if j > 0:\n",
-    "                A[j:,j] = A[j:,j] - dot(A[j:,:j-1], A[j,:j-1])\n",
-    "            A[:,j] = A[:,j]/np.sqrt(A[j,j])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Testing the function `Cholesky_decomp`"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# import stuff\n",
-    "import numpy as np\n",
-    "from scipy.linalg import cholesky"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# define N\n",
-    "N = 7"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# create a symmetric and positive definite matrix A\n",
-    "A = np.random.rand(N,N) + 2*np.identity(N)\n",
-    "A = 0.5*(A + A.T)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# compute the Cholesky decomposition\n",
-    "G = Cholesky_decomp(A)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# verify if product GGT is equal to A\n",
-    "np.allclose(A, np.dot(G, G.T))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# compute the Cholesky decomposition with scipy\n",
-    "G_scipy = cholesky(A, lower=True)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# compare with your result\n",
-    "np.allclose(G_scipy, G)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Testing the function `Cholesky_decomp_overwrite`"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# compute the Cholesky decomposition overwriting A\n",
-    "Cholesky_decomp_overwrite(A)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# compare the lower triangle of A with the previously computed G\n",
-    "np.allclose(np.tril(A), G)"
+    "The example given above can be easily generalized for any symmetric and positive definite $N \\times N$ matrix $\\mathbf{A}$."
    ]
   },
   {
@@ -392,56 +252,287 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1 (optional)"
+    "### Exercise 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Create a function called `cho_decomp` for computing the matrix `G` from a symmetric and positive definite matrix `A`. The function must receive `A` and return the matrix `G`.\n",
+    "Create a function `cho_decomp` according to the template below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def cho_decomp(A, check_input=True):\n",
+    "    '''\n",
+    "    Compute the Cholesky decomposition of a symmetric and \n",
+    "    positive definite matrix A. Matrix A is not modified.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    A : numpy narray 2d\n",
+    "        Full square matrix of the linear system.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    G : numpy array 2d\n",
+    "        Lower triangular matrix representing the Cholesky factor of matrix A.\n",
+    "    '''\n",
+    "    N = A.shape[0]\n",
+    "    if check_input is True:\n",
+    "        assert A.ndim == 2, 'A must be a matrix'\n",
+    "        assert A.shape[1] == N, 'A must be square'\n",
+    "        assert np.all(A.T == A), 'A must be symmetric'\n",
+    "    \n",
+    "    G = N x N matrix of zeros \n",
+    "    for j = 0:N-1\n",
+    "        G[j,j] = A[j,j] - dot(G[j,:j-1],G[j,:j-1])\n",
+    "        if G[j,j] <= 0:\n",
+    "            raise ValueError(\"A is not positive definite\")\n",
+    "        G[j,j] = sqrt(G[j,j])\n",
+    "        G[j+1:,j] = (A[j+1:,j] - dot(G[j+1:,:j-1], G[j,:j-1]))/G[j,j]\n",
+    "    \n",
+    "    return G\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the function `cho_decomp` can be used to verify if a given symmetric matrix is positive definite. If a given matrix is not positive definite, there will be a negative argument in the square root presented above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionally, create at least **two tests**:\n",
     "\n",
-    "2) Use the function `cho_decomp` to verify if $\\mathbf{A} = \\mathbf{G}\\mathbf{G}^{\\top}$."
+    "* Define a symmetric and positive definite matrix `A`, compute the Cholesky decomposition with function `cho_decomp`, verify if `A` = `G` `G`<sup>T</sup>.\n",
+    "* Define a symmetric and positive definite matrix `A`, define a vector `x`, compute a vector `y`, compute the Cholesky decomposition of `A` with your function `cho_decomp`, use the computed Cholesky factor and your functions to solve triangular systems to obtain a solution `x1` of the system `A x1 = y`, compare `x1` with the true solution `x`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2 (optional)"
+    "### Exercise 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Create a function called `cho_solve` to solve a linear system by using the calculated `G`. The function must receive `G` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
+    "An alternative implementation overwrites the lower triangle of $\\mathbf{A}$, including the main diagonal, with the Cholesky factor $\\mathbf{G}$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def cho_decomp_overwrite(A, check_input=True):\n",
+    "    '''\n",
+    "    Compute the Cholesky decomposition of a symmetric and \n",
+    "    positive definite matrix A. The lower triangle of A, including its main\n",
+    "    diagonal, is overwritten by its Cholesky factor.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    A : numpy narray 2d\n",
+    "        Full square matrix of the linear system.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    A : numpy array 2d\n",
+    "        Modified matrix A with its lower triangle, including its main diagonal, overwritten \n",
+    "        by its corresponding Cholesky factor.\n",
+    "    '''\n",
+    "    N = A.shape[0]\n",
+    "    if check_input is True:\n",
+    "        assert A.ndim == 2, 'A must be a matrix'\n",
+    "        assert A.shape[1] == N, 'A must be square'\n",
+    "        assert np.all(A.T == A), 'A must be symmetric'\n",
+    "    for j = 0:N-1\n",
+    "        if j > 0:\n",
+    "            A[j:,j] = A[j:,j] - dot(A[j:,:j-1], A[j,:j-1])\n",
+    "        if np.sqrt(A[j,j]) <= 0:\n",
+    "            raise ValueError(\"A is not positive definite\")\n",
+    "        A[:,j] = A[:,j]/np.sqrt(A[j,j])\n",
+    "    return A\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionally, create at least **two tests**:\n",
     "\n",
-    "2) Compare the solution obtained by using the function `cho_solve` with the solution obtained by using the routine [`numpy.linalg.solve`](https://numpy.org/doc/stable/reference/generated/numpy.linalg.solve.html)"
+    "* Define a symmetric and positive definite matrix `A`, define a copy `A1` of matrix `A`, compute the Cholesky decomposition of `A1` with your function `cho_decomp_overwrite`, verify if `A` = `G` `G`<sup>T</sup>.\n",
+    "* Define a symmetric and positive definite matrix `A`, define a vector `x`, compute a vector `y`, compute the Cholesky decomposition of `A` with your function `cho_decomp_overwrite`, use the computed Cholesky factor and your functions to solve triangular systems to obtain a solution `x1` of the system `A x1 = y`, compare `x1` with the true solution `x`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3 (optional)"
+    "### Exercise 3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Create a function called `cho_inverse` to compute the inverse of a symmetric positive definite matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `cho_decomp` and `cho_solve`.\n",
+    "Create a function called `cho_inverse` to compute the inverse of a symmetric positive definite matrix according to the template below: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def cho_inverse(G, check_input=True):\n",
+    "    '''\n",
+    "    Compute the inverse of a symmetric and positive definite matrix A \n",
+    "    by using its Cholesky factor.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    G : numpy narray 2d\n",
+    "        Cholesky factor of matrix A (output of function 'cho_decomp' or 'cho_decomp_overwrite').\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    Ainv : numpy array 2d\n",
+    "        Inverse of A.\n",
+    "    '''\n",
+    "    N = G.shape[0]\n",
+    "    if check_input is True:\n",
+    "        assert G.ndim == 2, 'G must be a matrix'\n",
+    "        assert G.shape[1] == N, 'G must be square'\n",
+    "\n",
+    "    # create your code here\n",
+    "    \n",
+    "    return Ainv\n",
+    "\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `cho_decomp` and `cho_solve`.\n",
     "\n",
     "2) Use the function `cho_inverse` to compute the inverse of a symmetric positive definite matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Additionally, create at least **two tests**:\n",
+    "* Create a symmetric and positive definit matrix `A`, compute its inverse `Ainv` with your function `cho_inverse`, verify if the products `A` `Ainv` and `Ainv` `A` produce the identity matrix.\n",
+    "* Compare the inverse obtained with your function `cho_inverse` with that obtained by the function [`numpy.linalg.inv`](https://numpy.org/doc/stable/reference/generated/numpy.linalg.inv.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing the function `cho_decomp`"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# import stuff\n",
+    "import numpy as np\n",
+    "from scipy.linalg import cholesky"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# define N\n",
+    "N = 7"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# create a symmetric and positive definite matrix A\n",
+    "A = np.random.rand(N,N) + 2*np.identity(N)\n",
+    "A = 0.5*(A + A.T)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# compute the Cholesky decomposition\n",
+    "G = cho_decomp(A)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# verify if product GGT is equal to A\n",
+    "np.allclose(A, np.dot(G, G.T))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# compute the Cholesky decomposition with scipy\n",
+    "G_scipy = cholesky(A, lower=True)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# compare with your result\n",
+    "np.allclose(G_scipy, G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing the function `cho_decomp_overwrite`"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# compute the Cholesky decomposition overwriting A\n",
+    "cho_decomp_overwrite(A)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# compare the lower triangle of A with the previously computed G\n",
+    "np.allclose(np.tril(A), G)"
+   ]
   }
  ],
  "metadata": {
