classes Gauss with pivoting, LU, LU with pivoting, Cholesky

--- a/Content/lu_decomp.ipynb
+++ b/Content/lu_decomp.ipynb
@@ -426,19 +426,19 @@
     "\\end{array} \\right] +\n",
     "\\left[ \\begin{array}{ccc}\n",
     "0 & 0 & 0 \\\\\n",
-    "t_{2}^{(1)} & 0 & 0 \\\\\n",
-    "t_{3}^{(1)} & 0 & 0\n",
+    "t_{1}^{(1)} & 0 & 0 \\\\\n",
+    "t_{2}^{(1)} & 0 & 0\n",
     "\\end{array} \\right] +\n",
     "\\left[ \\begin{array}{ccc}\n",
     "0 & 0 & 0 \\\\\n",
     "0 & 0 & 0 \\\\\n",
-    "0 & t_{3}^{(2)} & 0\n",
+    "0 & t_{2}^{(2)} & 0\n",
     "\\end{array} \\right] \\\\\n",
     "&=\n",
     "\\left[ \\begin{array}{ccc}\n",
     "1 & 0 & 0 \\\\\n",
-    "t_{2}^{(1)} & 1 & 0 \\\\\n",
-    "t_{3}^{(1)} & t_{3}^{(2)} & 1\n",
+    "t_{1}^{(1)} & 1 & 0 \\\\\n",
+    "t_{2}^{(1)} & t_{2}^{(2)} & 1\n",
     "\\end{array} \\right]\n",
     "\\end{split} \\quad\\quad . \\tag{10}\n",
     "$$"
@@ -588,8 +588,9 @@
     "    Returns\n",
     "    -------\n",
     "    C : numpy array 2d\n",
-    "        Full square matrix containing the element of L below the main diagonal and \n",
-    "        the elements of U in the upper triangle (including the elements on the main diagonal).\n",
+    "        Full square matrix containing the element of L below the \n",
+    "        main diagonal and the elements of U in the upper triangle \n",
+    "        (including the elements on the main diagonal).\n",
     "    '''\n",
     "    N = A.shape[0]\n",
     "    if check_input is True:\n",
