numerical integration class

--- a/Content/newton-cotes.ipynb
+++ b/Content/newton-cotes.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $P_{1} \\left[ x_{i} , x_{i+1} \\right]$ is a [Lagrange's polynomial](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/lagrange.ipynb) of order 1 passing through the points $x_{i}$ and $x_{i+1}$, $i = 1, \\dots, N$. Here, this polynomial assumes the following form:"
+    "where $P_{1} \\left[ x_{i} , x_{i+1} \\right]$ is a Lagrange's polynomial (`interpolation.pdf`) of order 1 passing through the points $x_{i}$ and $x_{i+1}$, $i = 1, \\dots, N$. Here, this polynomial assumes the following form:"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $P_{2} \\left[ x_{i} , x_{i+1}, x_{i+2} \\right]$ is a [Lagrange's polynomial](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/lagrange.ipynb) of order 2 passing through the points $x_{i}$, $x_{i+1}$, and $x_{i+2}$, $i = 1, 3, 5, \\dots, N-1$. Here, this polynomial assumes the following form:"
+    "where $P_{2} \\left[ x_{i} , x_{i+1}, x_{i+2} \\right]$ is a Lagrange's polynomial (`interpolation.pdf`) of order 2 passing through the points $x_{i}$, $x_{i+1}$, and $x_{i+2}$, $i = 1, 3, 5, \\dots, N-1$. Here, this polynomial assumes the following form:"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute the abrupt temparature perturbation by using: i) the routine [scipy.special.erf](https://docs.scipy.org/doc/scipy-0.15.1/reference/generated/scipy.special.erf.html), ii) the function `comp_trapezoidal`, and iii) the function `comp_simpson` shown above. Compare the three computed temperature perturbations. Consider $\\lambda = 31.5576$ $m^{2}/\\text{year}$."
+    "Compute the abrupt temparature perturbation by using: i) the routine [scipy.special.erf](https://docs.scipy.org/doc/scipy/reference/generated/scipy.special.erf.html#scipy.special.erf), ii) the function `comp_trapezoidal`, and iii) the function `comp_simpson` shown above. Compare the three computed temperature perturbations. Consider $\\lambda = 31.5576$ $m^{2}/\\text{year}$."
    ]
   },
   {
