--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -366,13 +366,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "|    \t| $k$         \t| 0   \t| 1   \t| 2   \t| 3   \t|\n",
-    "|----\t|-----------\t|-----\t|-----\t|-----\t|-----\t|\n",
-    "| $n$ \t| $G_n \\big \\\\ g_k$ \t| $g_0$ \t| $g_1$ \t| $g_2$ \t| $g_3$ \t|\n",
-    "| **-2** \t| $G_{-2}$      \t| 0   \t| -2  \t| -4  \t| -6  \t|\n",
-    "| **-1** \t| $G_{-1}$      \t| 0   \t| -1  \t| -2  \t| -3  \t|\n",
-    "| **0** \t| $G_0$       \t| 0   \t| 0   \t| 0   \t| 0   \t|\n",
-    "| **1** \t| $G_1$       \t| 0   \t| 1   \t| 2   \t| 3   \t|"
+    "|       | $k$           | 0     | 1     | 2     | 3     |\n",
+    "|----   |-----------    |-----  |-----  |-----  |-----  |\n",
+    "| $n$   | $G_n \\big \\\\ g_k$     | $g_0$     | $g_1$     | $g_2$     | $g_3$     |\n",
+    "| **-2**    | $G_{-2}$          | 0     | -2    | -4    | -6    |\n",
+    "| **-1**    | $G_{-1}$          | 0     | -1    | -2    | -3    |\n",
+    "| **0**     | $G_0$         | 0     | 0     | 0     | 0     |\n",
+    "| **1**     | $G_1$         | 0     | 1     | 2     | 3     |"
    ]
   },
   {
@@ -418,13 +418,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "|    \t| $k$         \t| 0   \t| 1   \t| 2   \t| 3   \t|\n",
-    "|----\t|-----------\t|-----\t|-----\t|-----\t|-----\t|\n",
-    "| $n$  \t| $G_n \\big \\\\ g_k$ \t| $g_0$ \t| $g_1$ \t| $g_2$ \t| $g_3$ \t|\n",
-    "| **0**  \t| $G_0$       \t| 0   \t| 0   \t| 0   \t| 0   \t|\n",
-    "| **1**  \t| $G_1$       \t| 0   \t| 1   \t| 2   \t| 3   \t|\n",
-    "| **2**  \t| $G_2$       \t| 0   \t| 2   \t| 4   \t| 6   \t|\n",
-    "| **3**  \t| $G_3$       \t| 0   \t| 3   \t| 6   \t| 9   \t|"
+    "|       | $k$           | 0     | 1     | 2     | 3     |\n",
+    "|----   |-----------    |-----  |-----  |-----  |-----  |\n",
+    "| $n$   | $G_n \\big \\\\ g_k$     | $g_0$     | $g_1$     | $g_2$     | $g_3$     |\n",
+    "| **0**     | $G_0$         | 0     | 0     | 0     | 0     |\n",
+    "| **1**     | $G_1$         | 0     | 1     | 2     | 3     |\n",
+    "| **2**     | $G_2$         | 0     | 2     | 4     | 6     |\n",
+    "| **3**     | $G_3$         | 0     | 3     | 6     | 9     |"
    ]
   },
   {
@@ -552,8 +552,10 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{g} \\xrightarrow[]{1} \\mathbf{G} \\\\\n",
-    "\\mathbf{g} \\xleftarrow[\\frac{1}{N}]{} \\mathbf{G}\n",
+    "\\begin{split}\n",
+    "\\mathbf{g} &\\xrightarrow[]{1} \\mathbf{G} \\\\\n",
+    "\\mathbf{g} &\\xleftarrow[\\frac{1}{N}]{} \\mathbf{G}\n",
+    "\\end{split}\n",
     "$$"
    ]
   },
@@ -569,8 +571,10 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{g} \\xrightarrow[]{\\frac{1}{\\sqrt{N}}} \\mathbf{G} \\\\\n",
-    "\\mathbf{g} \\xleftarrow[\\frac{1}{\\sqrt{N}}]{} \\mathbf{G}\n",
+    "\\begin{split}\n",
+    "\\mathbf{g} &\\xrightarrow[]{\\frac{1}{\\sqrt{N}}} \\mathbf{G} \\\\\n",
+    "\\mathbf{g} &\\xleftarrow[\\frac{1}{\\sqrt{N}}]{} \\mathbf{G}\n",
+    "\\end{split}\n",
     "$$"
    ]
   },
@@ -586,8 +590,10 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{g} \\xrightarrow[]{\\frac{1}{N}} \\mathbf{G} \\\\\n",
-    "\\mathbf{g} \\xleftarrow[1]{} \\mathbf{G}\n",
+    "\\begin{split}\n",
+    "\\mathbf{g} &\\xrightarrow[]{\\frac{1}{N}} \\mathbf{G} \\\\\n",
+    "\\mathbf{g} &\\xleftarrow[1]{} \\mathbf{G}\n",
+    "\\end{split}\n",
     "$$"
    ]
   },
@@ -992,7 +998,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "<a id='ex1'></a>\n",
@@ -1067,9 +1075,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
